Fixed bug #41845 (pgsql extension does not compile with PostgreSQL <7.4)